--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'org.jsoup:jsoup:1.11.2'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
 
 }
