--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile 'com.github.kittinunf.fuel:fuel-android:1.12.1'
     compile("com.fasterxml.jackson.module:jackson-module-kotlin:2.9.2")
 
 }
