--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,10 @@ captures/
 .idea/gradle.xml
 .idea/dictionaries
 .idea/libraries
+.idea/misc.xml
+.idea/caches/
+.idea/codeStyles/
+
 
 # Keystore files
 *.jks
@@ -53,3 +57,4 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+
