--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'com.github.kittinunf.fuel:fuel-android:1.12.1'
-    compile("com.fasterxml.jackson.module:jackson-module-kotlin:2.9.2")
+    compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.2'
+    compile 'commons-net:commons-net:3.6'
+
 
 }
