--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'io.fabric'
+
 
 android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "org.loriz.mihomereplacer"
-        minSdkVersion 19
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 6
         versionName "0.4.1"
@@ -20,11 +20,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion '27.0.3'
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -38,6 +39,4 @@ dependencies {
     compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.2'
     compile 'commons-net:commons-net:3.6'
     compile 'commons-io:commons-io:2.6'
-
-
 }
