--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,16 +30,16 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
+    implementation 'org.jsoup:jsoup:1.11.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    implementation 'com.github.kittinunf.fuel:fuel-android:1.12.1'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.2'
+    implementation 'commons-net:commons-net:3.6'
+    implementation 'commons-io:commons-io:2.6'
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
         transitive = true;
     }
-    compile 'org.jsoup:jsoup:1.11.2'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-    compile 'com.github.kittinunf.fuel:fuel-android:1.12.1'
-    compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.2'
-    compile 'commons-net:commons-net:3.6'
-    compile 'commons-io:commons-io:2.6'
 }
